--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       border: 1px solid #334155;
       border-radius: 12px;
       box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     [data-theme="light"] .card {
@@ -54,7 +55,34 @@
       box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05);
     }
 
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 10px 15px -3px rgba(0,0,0,0.2);
+    }
+
+    .section-title {
+      position: relative;
+      display: inline-block;
+      font-size: 1.75rem;
+      font-weight: bold;
+      margin-bottom: 1.25rem;
+      padding-bottom: 0.5rem;
+    }
+
+    .section-title::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      height: 3px;
+      background: linear-gradient(to right, #3b82f6, #60a5fa);
+      border-radius: 2px;
+    }
+
     .negative { color: var(--negative); }
+    .positive { color: var(--positive); }
 
     .gauge-container {
       position: relative;
@@ -115,46 +143,45 @@
 <body class="min-h-screen flex flex-col">
 
   <!-- 상단 헤더 -->
-<header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50 px-4 sm:px-6 lg:px-8">
+  <header class="bg-gray-900/80 backdrop-blur-md border-b border-gray-800 sticky top-0 z-50 px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-24 max-w-7xl mx-auto">
-        <!-- Left Side: Title and Subtitle -->
-        <div>
-            <h1 class="text-3xl font-bold" style="color: var(--text-primary);">Money Flow 자산 흐름</h1>
-            <p class="text-sm mt-1" style="color: var(--text-secondary);">
-                주요 자산들의 가격 현황 및 주요 지표
-                <span class="ml-2 px-2 py-1 rounded-md text-xs" style="background-color: var(--bg-secondary); color: var(--text-secondary);">Updated: 오후 12:06:24</span>
-            </p>
-        </div>
+      <!-- Left Side: Title and Subtitle -->
+      <div>
+        <h1 class="text-3xl font-bold" style="color: var(--text-primary);">Money Flow 자산 흐름</h1>
+        <p class="text-sm mt-1" style="color: var(--text-secondary);">
+          주요 자산들의 가격 현황 및 주요 지표
+          <span class="ml-2 px-2 py-1 rounded-md text-xs" style="background-color: var(--bg-secondary); color: var(--text-secondary);">Updated: 오후 12:06:24</span>
+        </p>
+      </div>
 
-        <!-- Right Side: Indicators -->
-        <div class="flex items-center space-x-4">
-            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
-                <div class="text-xs" style="color: var(--text-secondary);">$ 원/달러 환율</div>
-                <div class="text-lg font-bold" style="color: var(--text-primary);">1449.4원</div>
-            </div>
-            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
-                <div class="text-xs" style="color: var(--text-secondary);">업비트 USDT</div>
-                <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
-            </div>
-            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
-                <div class="text-xs" style="color: var(--text-secondary);">빗썸 USDT</div>
-                <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
-            </div>
-            <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
-                <div class="text-xs" style="color: var(--text-secondary);">김치프리미엄 (USDT)</div>
-                <div class="text-lg font-bold text-green-500">+1.88%</div>
-            </div>
-             <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
-                <i id="theme-icon" class="fas fa-moon text-xl"></i>
-             </button>
+      <!-- Right Side: Indicators -->
+      <div class="flex items-center space-x-4">
+        <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+          <div class="text-xs" style="color: var(--text-secondary);">$ 원/달러 환율</div>
+          <div class="text-lg font-bold" style="color: var(--text-primary);">1449.4원</div>
         </div>
+        <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+          <div class="text-xs" style="color: var(--text-secondary);">업비트 USDT</div>
+          <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
+        </div>
+        <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+          <div class="text-xs" style="color: var(--text-secondary);">빗썸 USDT</div>
+          <div class="text-lg font-bold" style="color: var(--text-primary);">₩1,477</div>
+        </div>
+        <div class="card p-3 rounded-lg text-center hidden md:block" style="background-color: var(--card-bg);">
+          <div class="text-xs" style="color: var(--text-secondary);">김치프리미엄 (USDT)</div>
+          <div class="text-lg font-bold text-green-500">+1.88%</div>
+        </div>
+        <button id="theme-toggle" class="p-2 rounded-lg hover:bg-gray-800 transition">
+          <i id="theme-icon" class="fas fa-moon text-xl"></i>
+        </button>
+      </div>
     </div>
-</header>
-
+  </header>
 
   <div class="flex flex-1 overflow-hidden">
 
-    <!-- 좌측 사이드바 (기존과 동일) -->
+    <!-- 좌측 사이드바 -->
     <aside class="sidebar w-64 flex-shrink-0 hidden md:block overflow-y-auto">
       <nav class="py-6 px-4 space-y-1">
         <a href="#" class="flex items-center px-4 py-3 rounded-lg bg-blue-600/20 text-blue-400">
@@ -179,10 +206,13 @@
     <main class="flex-1 overflow-y-auto p-4 md:p-6">
       <div class="max-w-7xl mx-auto">
         <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-6">
-          
+
           <!-- 원자재 섹션 -->
           <section class="card p-6 space-y-4 flex flex-col">
-            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">원자재</h2>
+            <h2 class="section-title text-center mx-auto">원자재</h2>
+            <div class="flex items-center justify-center text-4xl mb-2">
+              <i class="fas fa-coins text-yellow-400"></i>
+            </div>
             <div class="flex-grow space-y-4 flex flex-col">
               <!-- 금 -->
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
@@ -192,7 +222,7 @@
                 </div>
                 <div class="mt-2">
                   <div class="text-2xl font-bold">2,685.40</div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+1.24% (+32.80)</span>
                   </div>
@@ -206,15 +236,15 @@
                 </div>
                 <div class="mt-2">
                   <div class="text-2xl font-bold">31.85</div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+2.15% (+0.67)</span>
                   </div>
                 </div>
               </div>
-              <!-- 금 공포 탐욕 지수 -->
+              <!-- 금 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">금 공포 탐욕 지수<br><span class="text-sm font-normal">(Fear & Greed)</span></h3>
+                <h3 class="text-lg font-semibold text-center mb-2">금 공포탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
@@ -227,7 +257,7 @@
                 </div>
                 <div class="text-center text-2xl font-bold mt-2">
                   <div>50</div>
-                  <div class="text-base font-semibold">중립<br><span class="text-xs font-normal">(Neutral)</span></div>
+                  <div class="text-base font-semibold">중립</div>
                 </div>
               </div>
             </div>
@@ -235,7 +265,10 @@
 
           <!-- 미국 주식 섹션 -->
           <section class="card p-6 space-y-4 flex flex-col">
-            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">미국 주식</h2>
+            <h2 class="section-title text-center mx-auto">미국 주식</h2>
+            <div class="flex items-center justify-center text-4xl mb-2">
+              <i class="fas fa-chart-line text-blue-400"></i>
+            </div>
             <div class="flex-grow space-y-4 flex flex-col">
               <!-- S&P500 -->
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
@@ -251,11 +284,11 @@
                   </div>
                 </div>
               </div>
-              <!-- NASDAQ 100 -->
+              <!-- QQQ -->
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
                 <div class="flex items-center justify-center space-x-4">
-                  <div class="text-lg font-semibold">NASDAQ 100</div>
-                  <i class="fas fa-building-columns text-purple-400 text-2xl"></i>
+                  <div class="text-lg font-semibold">QQQ</div>
+                  <i class="fas fa-rocket text-purple-400 text-2xl"></i>
                 </div>
                 <div class="mt-2">
                   <div class="text-2xl font-bold">498.75</div>
@@ -267,7 +300,7 @@
               </div>
               <!-- 미국 주식 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">미국 주식 공포 탐욕 지수<br><span class="text-sm font-normal">(Fear & Greed)</span></h3>
+                <h3 class="text-lg font-semibold text-center mb-2">미국 주식 공포탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
@@ -280,7 +313,7 @@
                 </div>
                 <div class="text-center text-2xl font-bold mt-2">
                   <div>62</div>
-                  <div class="text-base font-semibold">탐욕<br><span class="text-xs font-normal">(Greed)</span></div>
+                  <div class="text-base font-semibold">탐욕</div>
                 </div>
               </div>
             </div>
@@ -288,7 +321,10 @@
 
           <!-- 한국 주식 섹션 -->
           <section class="card p-6 space-y-4 flex flex-col">
-            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">한국 주식</h2>
+            <h2 class="section-title text-center mx-auto">한국 주식</h2>
+            <div class="flex items-center justify-center text-4xl mb-2">
+              <i class="fas fa-building text-red-400"></i>
+            </div>
             <div class="flex-grow space-y-4 flex flex-col">
               <!-- 코스피 -->
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
@@ -298,7 +334,7 @@
                 </div>
                 <div class="mt-2">
                   <div class="text-2xl font-bold">2,612.45</div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+0.85% (+22.10)</span>
                   </div>
@@ -312,7 +348,7 @@
                 </div>
                 <div class="mt-2">
                   <div class="text-2xl font-bold">842.18</div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+1.12% (+9.32)</span>
                   </div>
@@ -320,20 +356,20 @@
               </div>
               <!-- 한국 주식 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">한국 주식 공포 탐욕 지수<br><span class="text-sm font-normal">(Fear & Greed)</span></h3>
+                <h3 class="text-lg font-semibold text-center mb-2">한국 주식 공포탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
                   <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(79.9 * 1.8deg - 90deg));"></div>
                   <div class="gauge-center-point"></div>
-                   <div class="gauge-labels">
+                  <div class="gauge-labels">
                     <span>V.Fear</span>
                     <span>V.Greed</span>
                   </div>
                 </div>
                 <div class="text-center text-2xl font-bold mt-2">
                   <div>79.9</div>
-                  <div class="text-base font-semibold">극단적 탐욕<br><span class="text-xs font-normal">(Extreme Greed)</span></div>
+                  <div class="text-base font-semibold">극단적 탐욕</div>
                 </div>
               </div>
             </div>
@@ -341,7 +377,10 @@
 
           <!-- 크립토 섹션 -->
           <section class="card p-6 space-y-4 flex flex-col">
-            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">크립토</h2>
+            <h2 class="section-title text-center mx-auto">크립토</h2>
+            <div class="flex items-center justify-center text-4xl mb-2">
+              <i class="fab fa-bitcoin text-orange-500"></i>
+            </div>
             <div class="flex-grow space-y-4 flex flex-col">
               <!-- 비트코인 -->
               <div class="card p-4 hover:shadow-lg transition text-center flex-grow flex flex-col justify-between">
@@ -350,11 +389,11 @@
                   <i class="fab fa-bitcoin text-orange-500 text-2xl"></i>
                 </div>
                 <div class="mt-2">
-                  <div class="flex items-baseline justify-center space-x-4">
+                  <div class="flex items-baseline justify-center space-x-4 flex-wrap">
                     <div class="text-xl font-bold">$98,450</div>
-                    <div class="text-xl font-bold">₩135,245,000</div>
+                    <div class="text-lg font-bold ml-2">₩135,245,000</div>
                   </div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2 mt-1">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+2.45% (+$2,350)</span>
                   </div>
@@ -367,11 +406,11 @@
                   <i class="fab fa-ethereum text-blue-300 text-2xl"></i>
                 </div>
                 <div class="mt-2">
-                   <div class="flex items-baseline justify-center space-x-4">
+                  <div class="flex items-baseline justify-center space-x-4 flex-wrap">
                     <div class="text-xl font-bold">$3,820</div>
-                    <div class="text-xl font-bold">₩5,145,000</div>
+                    <div class="text-lg font-bold ml-2">₩5,145,000</div>
                   </div>
-                  <div class="text-sm flex items-center justify-center space-x-2" style="color: var(--positive);">
+                  <div class="text-sm positive flex items-center justify-center space-x-2 mt-1">
                     <i class="fas fa-arrow-trend-up"></i>
                     <span>+1.88% (+$70)</span>
                   </div>
@@ -379,24 +418,25 @@
               </div>
               <!-- 크립토 공포탐욕 지수 -->
               <div class="card p-4">
-                <h3 class="text-lg font-semibold text-center mb-2">크립토 공포 탐욕 지수<br><span class="text-sm font-normal">(Fear & Greed)</span></h3>
+                <h3 class="text-lg font-semibold text-center mb-2">크립토 공포탐욕 지수</h3>
                 <div class="gauge-container">
                   <div class="gauge-semi-circle"></div>
                   <div class="gauge-mask"></div>
                   <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(74 * 1.8deg - 90deg));"></div>
                   <div class="gauge-center-point"></div>
-                   <div class="gauge-labels">
+                  <div class="gauge-labels">
                     <span>Extreme Fear</span>
                     <span>Extreme Greed</span>
                   </div>
                 </div>
                 <div class="text-center text-2xl font-bold mt-2">
                   <div>74</div>
-                  <div class="text-base font-semibold">탐욕<br><span class="text-xs font-normal">(Greed)</span></div>
+                  <div class="text-base font-semibold">탐욕</div>
                 </div>
               </div>
             </div>
           </section>
+
         </div>
       </div>
 
