--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       border-radius: 12px;
       box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      min-height: 140px; /* 카드 높이 고정 */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     [data-theme="light"] .card {
@@ -85,7 +89,15 @@
     .positive { color: var(--positive); }
     .negative { color: var(--negative); }
 
-    .loading { color: var(--text-secondary); text-align: center; padding: 1rem; }
+    .loading-spinner {
+      display: inline-block;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -140,100 +152,84 @@
         <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-5 gap-4 mb-8">
           <div class="card p-4">
             <div class="text-sm text-gray-400">원/달러 환율</div>
-            <div id="usdkrw-price" class="text-xl font-bold">로딩 중...</div>
+            <div id="usdkrw-price" class="text-xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="usdkrw-change" class="text-sm"></div>
           </div>
           <div class="card p-4">
-            <div class="text-sm text-gray-400">업비트 USDT</div>
-            <div id="upbit-usdt" class="text-xl font-bold">로딩 중...</div>
-          </div>
-          <div class="card p-4">
-            <div class="text-sm text-gray-400">빗썸 USDT</div>
-            <div id="bithumb-usdt" class="text-xl font-bold">로딩 중...</div>
-          </div>
-          <div class="card p-4">
             <div class="text-sm text-gray-400">김치 프리미엄</div>
-            <div id="kimp" class="text-xl font-bold text-green-400">로딩 중...</div>
+            <div id="kimp" class="text-xl font-bold text-green-400">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
           </div>
         </div>
 
         <!-- 주요 지수 카드들 -->
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-5 mb-10">
-          <!-- 금 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">금 (GLD)</div>
-            <div id="gld-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="gld-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="gld-change" class="text-sm"></div>
           </div>
 
-          <!-- 은 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">은 (SLV)</div>
-            <div id="slv-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="slv-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="slv-change" class="text-sm"></div>
           </div>
 
-          <!-- S&P500 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">S&P 500</div>
-            <div id="spx-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="spx-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="spx-change" class="text-sm"></div>
           </div>
 
-          <!-- QQQ -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">QQQ</div>
-            <div id="qqq-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="qqq-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="qqq-change" class="text-sm"></div>
           </div>
 
-          <!-- 코스피 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">코스피</div>
-            <div id="kospi-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="kospi-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="kospi-change" class="text-sm"></div>
           </div>
 
-          <!-- 코스닥 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">코스닥</div>
-            <div id="kosdaq-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="kosdaq-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="kosdaq-change" class="text-sm"></div>
           </div>
 
-          <!-- 비트코인 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">비트코인 (BTC)</div>
-            <div id="btc-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="btc-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="btc-change" class="text-sm"></div>
           </div>
 
-          <!-- 이더리움 -->
           <div class="card p-5">
             <div class="text-lg font-semibold mb-2">이더리움 (ETH)</div>
-            <div id="eth-price" class="text-2xl font-bold">로딩 중...</div>
+            <div id="eth-price" class="text-2xl font-bold">로딩 중... <i class="fas fa-spinner fa-spin loading-spinner"></i></div>
             <div id="eth-change" class="text-sm"></div>
           </div>
         </div>
 
-        <!-- 공포탐욕 지수 -->
+        <!-- 공포탐욕 지수 (아직 더미, 나중에 연동) -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
           <div class="card p-6">
             <h3 class="section-title">미국 주식 공포탐욕</h3>
-            <div id="us-feargreed" class="text-4xl font-bold text-center">로딩 중...</div>
-            <div id="us-feargreed-status" class="text-center mt-2 text-sm"></div>
+            <div class="text-4xl font-bold text-center">62</div>
+            <div class="text-center mt-2 text-sm">탐욕 (Greed)</div>
           </div>
 
           <div class="card p-6">
             <h3 class="section-title">한국 주식 공포탐욕</h3>
-            <div id="kr-feargreed" class="text-4xl font-bold text-center">로딩 중...</div>
-            <div id="kr-feargreed-status" class="text-center mt-2 text-sm"></div>
+            <div class="text-4xl font-bold text-center">79.9</div>
+            <div class="text-center mt-2 text-sm">극단적 탐욕</div>
           </div>
 
           <div class="card p-6">
             <h3 class="section-title">크립토 공포탐욕</h3>
-            <div id="crypto-feargreed" class="text-4xl font-bold text-center">로딩 중...</div>
-            <div id="crypto-feargreed-status" class="text-center mt-2 text-sm"></div>
+            <div class="text-4xl font-bold text-center">74</div>
+            <div class="text-center mt-2 text-sm">탐욕</div>
           </div>
         </div>
 
@@ -265,73 +261,63 @@
     }
   </script>
 
-<!-- ... 기존 head와 body 상단은 그대로 ... -->
+  <!-- 실제 가격 데이터 연동 스크립트 (개선 버전) -->
+  <script>
+    const apiKey = 'd61e1n9r01quqpfv0s0'; // 네 키
 
-<!-- 실제 가격 데이터 연동 스크립트 (수정 버전) -->
-<script>
-  const apiKey = 'd61e1n9r01quqpfv0s0'; // ← 네가 준 키 그대로 넣음 (실제로는 숨기세요)
+    const assets = {
+      USDKRW: 'USDKRW',
+      GLD: 'GLD',
+      SLV: 'SLV',
+      SPX: 'SPX',
+      QQQ: 'QQQ',
+      KOSPI: 'KS11',
+      KOSDAQ: 'KQ11',
+      BTC: 'BINANCE:BTCUSDT',
+      ETH: 'BINANCE:ETHUSDT'
+    };
 
-  // 종목 티커 매핑 (현재 코드에 맞게 정리)
-  const assets = {
-    USDKRW: 'USDKRW',          // 원/달러
-    GLD: 'GLD',                // 금
-    SLV: 'SLV',                // 은
-    SPX: 'SPX',                // S&P 500
-    QQQ: 'QQQ',
-    KOSPI: 'KS11',             // 코스피 지수
-    KOSDAQ: 'KQ11',            // 코스닥 지수
-    BTC: 'BINANCE:BTCUSDT',
-    ETH: 'BINANCE:ETHUSDT'
-  };
-
-  // fetch 헬퍼 (지연 + 에러 처리 강화)
-  async function fetchPrice(symbol, delayMs = 0) {
-    if (delayMs > 0) await new Promise(r => setTimeout(r, delayMs));
-    try {
-      const res = await fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`);
-      if (!res.ok) throw new Error('API 응답 오류');
-      const data = await res.json();
-      if (data.c == 0 || !data.c) return { price: 'N/A', change: '-' };
-      const changePct = ((data.c - data.pc) / data.pc * 100).toFixed(2);
-      const colorClass = changePct >= 0 ? 'positive' : 'negative';
-      return {
-        price: data.c.toLocaleString(),
-        change: `<span class="${colorClass}">${changePct >= 0 ? '+' : ''}${changePct}%</span>`
-      };
-    } catch (e) {
-      console.error(`Fetch 오류 (${symbol}):`, e);
-      return { price: '오류', change: '-' };
-    }
-  }
-
-  // 순차적으로 호출하면서 800ms 간격 주기 (분당 60회 넘지 않음)
-  async function updatePrices() {
-    document.getElementById('update-time').textContent = '업데이트 중...';
-
-    const keys = Object.keys(assets);
-    for (let i = 0; i < keys.length; i++) {
-      const key = keys[i];
-      const symbol = assets[key];
-      const data = await fetchPrice(symbol, i * 800); // 0.8초 간격
-
-      if (key === 'USDKRW') {
-        document.getElementById('usdkrw-price').textContent = data.price;
-        document.getElementById('usdkrw-change').innerHTML = data.change;
-      } else {
-        document.getElementById(`${key.toLowerCase()}-price`).textContent = data.price;
-        document.getElementById(`${key.toLowerCase()}-change`).innerHTML = data.change;
+    async function fetchPrice(symbol, delay = 0) {
+      if (delay > 0) await new Promise(r => setTimeout(r, delay));
+      try {
+        const res = await fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`);
+        if (!res.ok) return { price: 'N/A', change: '-' };
+        const data = await res.json();
+        if (data.c == 0 || !data.c) return { price: 'N/A', change: '-' };
+        const changePct = ((data.c - data.pc) / data.pc * 100).toFixed(2);
+        const colorClass = changePct >= 0 ? 'positive' : 'negative';
+        return {
+          price: data.c.toLocaleString(),
+          change: `<span class="${colorClass}">${changePct >= 0 ? '+' : ''}${changePct}%</span>`
+        };
+      } catch (e) {
+        return { price: '오류', change: '-' };
       }
     }
 
-    document.getElementById('update-time').textContent = `최종 업데이트: ${new Date().toLocaleTimeString('ko-KR')}`;
-  }
+    async function updatePrices() {
+      document.getElementById('update-time').textContent = '업데이트 중...';
 
-  // 초기 로드 + 60초마다 갱신 (분당 1회 → 한도 여유)
-  updatePrices();
-  setInterval(updatePrices, 60000);
-</script>
+      const keys = Object.keys(assets);
+      for (let i = 0; i < keys.length; i++) {
+        const key = keys[i];
+        const symbol = assets[key];
+        const data = await fetchPrice(symbol, i * 1500); // 1.5초 간격 → 분당 40회 이하로 안전
 
-<!-- ... 나머지 body와 script는 그대로 ... -->
+        const priceEl = document.getElementById(`${key.toLowerCase()}-price`);
+        const changeEl = document.getElementById(`${key.toLowerCase()}-change`);
+
+        if (priceEl) priceEl.textContent = data.price;
+        if (changeEl) changeEl.innerHTML = data.change;
+      }
+
+      document.getElementById('update-time').textContent = `최종 업데이트: ${new Date().toLocaleTimeString('ko-KR')}`;
+    }
+
+    // 페이지 열릴 때 바로 실행 + 90초마다 갱신 (분당 0.67회 → 완전 안전)
+    updatePrices();
+    setInterval(updatePrices, 90000);
+  </script>
 
 </body>
 </html>
